# shader-test-module

./: Cargo.toml  README.md  build.rs
assets/toml_materials/post_processing/: invert_y.toml  test_post.toml  warp.toml
assets/toml_materials/sprite/: channel_inspector.toml  color_replacement.toml  desat_sprite.toml  pan_sprite.toml  scrolling_color.toml  starfield.toml
src/: array.rs  asset_registering.rs  input_handlers.rs  lib.rs  local_error.rs  math.rs  test_validation.rs  text.rs  texture.rs  underline.rs
